Bug fix for nav not working on mobile due to pointer-events: none on child elements

--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -36,9 +36,9 @@
 				padding: 0.75rem 1rem;
 				margin: 0.25rem;
 				transition: all 0.25s;
-				* {
-					pointer-events: none;
-				}
+				// * {
+				// 	pointer-events: none;
+				// }
 				border-radius: 50%;
 				&:focus,
 				&:hover {
